--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.63",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.16",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "axios": "^1.6.2",
+    "jwt-decode": "^4.0.0",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.19.0",
+    "react-use": "^17.4.0",
+    "recharts": "^2.10.1",
+    "styled-components": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +41,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/luxon": "^3.3.5",
+    "@types/node": "^20.9.3",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.16",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.31",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.3.2"
   }
 }
